--- a/src/main/resources/templates/appointments.html
+++ b/src/main/resources/templates/appointments.html
@@ -1,10 +1,73 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Naked SpringBoot/JPA App</title>
+  <title>Naked Java Appointments</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-  <p th:text="'Appointments: ' + ${appointments}" />
+  <div class="container">
+    <div class="row">
+      <p th:if="${error != null}" th:text="${error}"></p>
+      <div class="col-sm-12">
+        <h4>Appointments</h4>
+        <div class="panel panel-default">
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th>Description</th>
+                <th>Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr th:each="appointment: ${appointments}">
+                <td th:text="${appointment.description}">Dentist</td>
+                <td th:text="${appointment.getDateString(defaultTimeZone)}">14/02/2015 14:00</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <h4>Create appointment</h4>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <form class="form-horizontal" action="/appointments/create" method="post">
+              <div class="form-group">
+                <label for="date" class="col-sm-3 control-label">Date</label>
+                <div class="col-sm-3">
+                  <input type="date" class="form-control" id="date" name="date">
+                </div>
+                <div class="col-sm-3">
+                  <input type="time" class="form-control" id="time" name="time">
+                </div>
+                <div class="col-sm-3">
+                  <select class="form-control" id="timeZone" name="timeZone">
+                    <option th:each="timeZone: ${timeZones}" th:value="${timeZone.iD}" th:text="${timeZone.displayName}" th:selected="${timeZone.iD==defaultTimeZone.iD}"></option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="description" class="col-sm-3 control-label">Description</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="description" name="description">
+                </div>
+              </div> 
+              <div class="form-group">
+                <div class="col-sm-12 text-right">
+                  <button type="submit" class="btn btn-default preview-add-button">
+                    <span class="glyphicon glyphicon-plus"></span> Create
+                  </button>
+                </div>
+              </div>
+              <input type="hidden" id="tz" name="tz" th:value="${defaultTimeZone.iD}">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
