--- a/src/main/resources/templates/appointments.html
+++ b/src/main/resources/templates/appointments.html
@@ -16,7 +16,7 @@
             <thead>
               <tr>
                 <th>Description</th>
-                <th>Date</th>
+                <th>Date/Time</th>
               </tr>
             </thead>
             <tbody>
@@ -31,12 +31,12 @@
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <h4>Create appointment</h4>
+        <h4>Create Appointment</h4>
         <div class="panel panel-default">
           <div class="panel-body">
             <form class="form-horizontal" action="/appointments/create" method="post">
               <div class="form-group">
-                <label for="date" class="col-sm-3 control-label">Date</label>
+                <label for="date" class="col-sm-3 control-label">Date/Time *</label>
                 <div class="col-sm-3">
                   <input type="date" class="form-control" id="date" name="date">
                 </div>
@@ -50,7 +50,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="description" class="col-sm-3 control-label">Description</label>
+                <label for="description" class="col-sm-3 control-label">Description *</label>
                 <div class="col-sm-9">
                   <input type="text" class="form-control" id="description" name="description">
                 </div>
