--- a/src/main/resources/templates/appointments.html
+++ b/src/main/resources/templates/appointments.html
@@ -2,27 +2,36 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Naked Java Appointments</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="/appointments.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="/appointments.js"></script>
 </head>
 <body>
   <div class="container">
+    <div th:if="${error != null}" class="error">
+      <div class="alert alert-danger" role="alert">
+        <h5>Sorry, there was a problem...</h5>
+        <span th:text="${error}"></span>
+      </div>
+    </div>
     <div class="row">
-      <p th:if="${error != null}" th:text="${error}"></p>
-      <div class="col-sm-12">
+      <div class="col">
         <h4>Appointments</h4>
-        <div class="panel panel-default">
+        <div class="card">
           <table class="table table-striped table-hover">
             <thead>
               <tr>
-                <th>Description</th>
-                <th>Date/Time</th>
+                <th class="description-column" scope="col">Description</th>
+                <th scope="date-column">Date/Time</th>
               </tr>
             </thead>
             <tbody>
               <tr th:each="appointment: ${appointments}">
-                <td th:text="${appointment.description}">Dentist</td>
-                <td th:text="${appointment.getDateString(defaultTimeZone)}">14/02/2015 14:00</td>
+                <td th:text="${appointment.description}"></td>
+                <td th:text="${appointment.getDateString(defaultTimeZone)}"></td>
               </tr>
             </tbody>
           </table>
@@ -30,34 +39,41 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col">
         <h4>Create Appointment</h4>
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <form class="form-horizontal" action="/appointments/create" method="post">
-              <div class="form-group">
-                <label for="date" class="col-sm-3 control-label">Date/Time *</label>
-                <div class="col-sm-3">
-                  <input type="date" class="form-control" id="date" name="date">
+        <div class="card">
+          <div class="card-body">
+            <form class="needs-validation" action="/appointments/create" method="post" novalidate>
+              <div class="form-group row">
+                <div class="col-sm text-right">
+                  <label class="inline-label">Date/Time *</label>
                 </div>
-                <div class="col-sm-3">
-                  <input type="time" class="form-control" id="time" name="time">
+                <div class="col-sm">
+                  <input type="date" class="form-control" id="date" name="date" required>
+                  <div class="invalid-feedback">Please provide a valid date.</div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm">
+                  <input type="time" class="form-control" id="time" name="time" required>
+                  <div class="invalid-feedback">Please provide a valid time.</div>
+                </div>
+                <div class="col-sm">
                   <select class="form-control" id="timeZone" name="timeZone">
                     <option th:each="timeZone: ${timeZones}" th:value="${timeZone.iD}" th:text="${timeZone.displayName}" th:selected="${timeZone.iD==defaultTimeZone.iD}"></option>
                   </select>
                 </div>
               </div>
-              <div class="form-group">
-                <label for="description" class="col-sm-3 control-label">Description *</label>
+              <div class="form-group row">
+                <div class="col-sm-3 text-right">
+                  <label class="inline-label" for="description">Description *</label>
+                </div>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" id="description" name="description">
+                  <input type="text" class="form-control" id="description" name="description" placeholder="Description..." required>
+                  <div class="invalid-feedback">Please provide a description.</div>
                 </div>
               </div> 
-              <div class="form-group">
-                <div class="col-sm-12 text-right">
-                  <button type="submit" class="btn btn-default preview-add-button">
+              <div class="form-group row">
+                <div class="col-sm-6 offset-sm-6 text-right">
+                  <button type="submit" class="btn btn-primary btn-block">
                     <span class="glyphicon glyphicon-plus"></span> Create
                   </button>
                 </div>
