Minor fix in HTML

--- a/src/main/resources/templates/appointments.html
+++ b/src/main/resources/templates/appointments.html
@@ -25,7 +25,7 @@
             <thead>
               <tr>
                 <th class="description-column" scope="col">Description</th>
-                <th scope="date-column">Date/Time</th>
+                <th class="date-column" scope="col">Date/Time</th>
               </tr>
             </thead>
             <tbody>
