--- a/src/main/resources/templates/appointments.html
+++ b/src/main/resources/templates/appointments.html
@@ -44,22 +44,28 @@
         <div class="card">
           <div class="card-body">
             <form class="needs-validation" action="/appointments/create" method="post" novalidate>
-              <div class="form-group row">
+              <div class="row">
                 <div class="col-sm text-right">
                   <label class="inline-label">Date/Time *</label>
                 </div>
                 <div class="col-sm">
-                  <input type="date" class="form-control" id="date" name="date" required>
-                  <div class="invalid-feedback">Please provide a valid date.</div>
+                  <div class="form-group">
+                    <input type="date" class="form-control" id="date" name="date" required>
+                    <div class="invalid-feedback">Please provide a valid date.</div>
+                  </div>
                 </div>
                 <div class="col-sm">
-                  <input type="time" class="form-control" id="time" name="time" required>
-                  <div class="invalid-feedback">Please provide a valid time.</div>
+                  <div class="form-group">
+                    <input type="time" class="form-control" id="time" name="time" required>
+                    <div class="invalid-feedback">Please provide a valid time.</div>
+                  </div>
                 </div>
                 <div class="col-sm">
-                  <select class="form-control" id="timeZone" name="timeZone">
-                    <option th:each="timeZone: ${timeZones}" th:value="${timeZone.iD}" th:text="${timeZone.displayName}" th:selected="${timeZone.iD==defaultTimeZone.iD}"></option>
-                  </select>
+                  <div class="form-group">
+                    <select class="form-control" id="timeZone" name="timeZone">
+                      <option th:each="timeZone: ${timeZones}" th:value="${timeZone.iD}" th:text="${timeZone.displayName}" th:selected="${timeZone.iD==defaultTimeZone.iD}"></option>
+                    </select>
+                  </div>
                 </div>
               </div>
               <div class="form-group row">
@@ -67,8 +73,9 @@
                   <label class="inline-label" for="description">Description *</label>
                 </div>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" id="description" name="description" placeholder="Description..." required>
-                  <div class="invalid-feedback">Please provide a description.</div>
+                  <textarea class="form-control" id="description" name="description" placeholder="Description..." maxlength="255" required></textarea>
+                  <small id="emailHelp" class="form-text text-muted">Max 255 characters.</small>
+                  <div class="invalid-feedback">Please provide a valid valid description.</div>
                 </div>
               </div> 
               <div class="form-group row">
