--- a/src/main/resources/templates/appointments.html
+++ b/src/main/resources/templates/appointments.html
@@ -75,7 +75,7 @@
                 <div class="col-sm-9">
                   <textarea class="form-control" id="description" name="description" placeholder="Description..." maxlength="255" required></textarea>
                   <small id="emailHelp" class="form-text text-muted">Max 255 characters.</small>
-                  <div class="invalid-feedback">Please provide a valid valid description.</div>
+                  <div class="invalid-feedback">Please provide a valid description.</div>
                 </div>
               </div> 
               <div class="form-group row">
